<resources>
    <string name="app_name">Trabalho</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_fechar">X</string>
    <string name="txtrgm_tip">RGM</string>
    <string name="txtsenha_tip">Senha</string>
    <string name="senha"></string>
    <string name="rgm"></string>
    <string name="Logout">Logout</string>
    <string name="seg">Segunda-Feira</string>
    <string name="ter">Terça-Feira</string>
    <string name="qua">Quarta-Feira</string>
    <string name="qui">Quinta-Feira</string>
    <string name="sex">Sexta-Feira</string>
    <string name="txtdia">Disciplina do dia :</string>
    <string name="disc_dia">Nenhuma Disciplina</string>
    <string name="dseg">Disciplina Aqui</string>
    <string name="dter">Disciplina Aqui</string>
    <string name="dqua">Disciplina Aqui</string>
    <string name="dqui">Disciplina Aqui</string>
    <string name="dsex">Disciplina Aqui</string>
    <string name="btn_voltar">Voltar</string>
    <string name="txtdisciplina">Disciplina:</string>
    <string name="disciplinaescolhida">Alvo</string>
    <string name="txthorarioaula">Horario da aula :</string>
    <string name="txthorariopresenca">Horario da Presença :</string>
    <string name="txtfaltas">Faltas: </string>
    <string name="horarioaula">00:00 a 00:00</string>
    <string name="horariopresenca">00:00</string>
    <string name="faltas">0</string>
    <string name="mpresenca">Marcar Presença</string>
    <string name="txtlatitude">Latitude: </string>
    <string name="latitude">0</string>
    <string name="txtlongitude">Longitude: </string>
    <string name="longitude">0</string>
    <string name="txtlocal">Localização Atual: </string>
    <string name="local">Não está proximo a unicid</string>
</resources>
