<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundLogin"
    android:orientation="vertical"
    tools:context=".ListagemActivity">

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtdisc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txtdisciplina"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/discalvo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/disciplinaescolhida"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txthorarioaula"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txthorarioaula"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/horarioaula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/horarioaula"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txthorariopresenca"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txthorariopresenca"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/horariopresenca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/horariopresenca"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtfaltas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txtfaltas"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faltas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/faltas"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/mpresenca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mpresenca" />

        <Button
            android:id="@+id/localizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Pegar Localização"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtlatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txtlatitude"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/latitude"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtlongitutde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txtlongitude"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/longitude"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtlocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/txtlocal"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/disciplinas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/transparenciatxt"
            android:text="@string/local"
            android:textAlignment="textEnd"
            android:textColor="@color/disciplinas"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>